<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/smileyGood"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/mood_smiley"
        app:srcCompat="@drawable/good"
        android:layout_alignTop="@+id/smileyNeutral"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/moodQ"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.076"
        app:layout_constraintHorizontal_bias="1.0" />

    <ImageView
        android:id="@+id/smileyNeutral"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/smileyBad"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/mood_smiley"
        app:srcCompat="@drawable/neutral"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/moodQ"
        app:layout_constraintVertical_bias="0.132"
        app:layout_constraintHorizontal_bias="0.533" />

    <ImageView
        android:id="@+id/smileyBad"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/mood_smiley"
        app:srcCompat="@drawable/bad"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/moodQ"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintHorizontal_bias="0.05" />

    <TextView
        android:id="@+id/moodQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_question"
        android:textSize="36sp"
        android:layout_above="@+id/smileyGood"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.20999998"
        app:layout_constraintHorizontal_bias="0.505" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/smileyBad"
        android:layout_below="@+id/smileyBad"
        android:text="@string/mood_bad"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/smileyBad"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignStart="@+id/smileyNeutral"
        android:text="@string/mood_neutral"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/smileyNeutral"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/smileyGood"
        android:text="@string/mood_good"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/smileyGood"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintVertical_bias="0.100000024" />
</android.support.constraint.ConstraintLayout>